--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-drag-drop-files": "^2.3.10",
+    "react-icons": "^4.12.0",
     "split-type": "^0.3.4"
   },
   "devDependencies": {
